# 03_05MVID--public

./: CMakeLists.txt  README.md
activities/: ACT01_MultiThreading.md  ACT02_MultiPlayer.md  ACT03_Pathfinding.md  ACT04_FinalCastle.md  OPT01_Flocking.md
assets/images/: zonas.psd
contents/: 001-MultiThreading.md.html  002-MultiPlayer.md.html  003-AI.md.html
contents/Res/md/: viu.css
include/containers/: vector.hpp
include/engine/: debug_draw.h  game.h  math.h  scene.h  sprite.h  texture.h  window.h
include/ia/: agent.h  body.h  defines.h  map.h  mind.h  scene_steering.h  world.h
include/ia/movement/kinematic/: kinematicarrive.h  kinematicflee.h  kinematicseek.h  kinematicwander.h
include/ia/movement/steering/: align.h  alignment.h  arrive.h  cohesion.h  flee.h  seek.h  seekPath.h  separation.h  velocity_matching.h
include/ia/movement/steering/delegated/: face.h  flocking.h  lookgoing.h  pursue.h  wander.h
include/ia/pathfinding/: pathfinding.h
include/mathlib/: defines.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
include/net/: socketaddress.h  socketutils.h  tcpsocket.h  udpsocket.h
libs/Debug/: SDL2main.lib
libs/Release/: SDL2_image.lib  SDL2main.lib
projects/: ACT02 Memoria.docx
projects/ACT01/: main.cpp
projects/ACT02_Client/: main.cpp
projects/ACT02_Server/: main.cpp
projects/ACT03/: main.cpp
projects/AG01/: main.cpp
projects/AG02_TCP_Client/: main.cpp
projects/AG02_TCP_Server/: main.cpp
projects/AG02_UDP_Client/: main.cpp
projects/AG02_UDP_Server/: main.cpp
projects/AG03/: main.cpp
projects/OPT01/: main.cpp
src/engine/: debug_draw.cc  game.cc  sprite.cc  texture.cc  window.cc
src/ia/: agent.cc  body.cc  mind.cc  scene_steering.cc
src/ia/movement/steering/: alignment.cc  cohesion.cc  separation.cc
src/ia/movement/steering/delegated/: flocking.cc
src/ia/pathfinding/: pathfinding.cc
src/mathlib/: mat3.cc  mat4.cc  vec2.cc  vec3.cc  vec4.cc
src/net/: tcpsocket.cpp  udpsocket.cpp
